test_Makefile: tasks for new tests added

--- a/test/Makefile
+++ b/test/Makefile
@@ -59,12 +59,16 @@ utility_listHelpers.o : utility_listHelpers.cpp $(GTEST_HEADERS)
 utility_consecIntMap.o : utility_consecIntMap.cpp $(GTEST_HEADERS)
 	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -c utility_consecIntMap.cpp
 
+conn_comps.o : conn_comps.cpp $(GTEST_HEADERS)
+	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -c -I ../boost_1_59_0 conn_comps.cpp
+
 main.o : main.cpp $(GTEST_HEADERS)
 	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -c main.cpp
 
 test : utility_parser.o $(UTIL_DIR)/Parser.o \
 		utility_listHelpers.o \
 		utility_consecIntMap.o \
+		conn_comps.o \
 		main.o \
 		$(GTEST_DIR)/make/gtest.a
 	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -lpthread $^ -o $@
