--- a/test/Makefile
+++ b/test/Makefile
@@ -1,13 +1,8 @@
-# ONLY tasks to run directly from test/:
-# 	- install
-# 	- clean
-# OHTERWISE, use makefile in projects root dir
-
-# Based on Makefile provided by googletest
+# For gtest-part: Based on Makefile provided by googletest
+# To make own tests: Based on http://aegis.sourceforge.net/auug97.pdf
 
 # Points to the root of Google Test, relative to where this file is.
 GTEST_DIR = ../lib/googletest_1.7.0
-UTIL_DIR = ../src/utility
 
 CXX = g++
 
@@ -25,7 +20,8 @@ GTEST_HEADERS = $(GTEST_DIR)/include/gtest/*.h \
 install : gtest.a gtest_main.a
 
 # cleans gtest files (i.e. file created by install)
-clean :
+.PHONY: clean-gtest
+clean-gtest :
 	rm -f $(GTEST_DIR)/make/gtest.a $(GTEST_DIR)/make/gtest_main.a \
 	$(GTEST_DIR)/make/*.o
 
@@ -35,44 +31,35 @@ GTEST_SRCS_ = $(GTEST_DIR)/src/*.cc $(GTEST_DIR)/src/*.h $(GTEST_HEADERS)
 gtest-all.o : $(GTEST_SRCS_)
 	$(CXX) $(CPPFLAGS) -I$(GTEST_DIR) $(CXXFLAGS) -c \
             $(GTEST_DIR)/src/gtest-all.cc \
-			-o $(GTEST_DIR)/make/gtest-all.o
+			-o $(GTEST_DIR)/make/$@
 
 gtest_main.o : $(GTEST_SRCS_)
 	$(CXX) $(CPPFLAGS) -I$(GTEST_DIR) $(CXXFLAGS) -c \
-            $(GTEST_DIR)/src/gtest_main.cc
-			-o $(GTEST_DIR)/make/gtest_main.o
+            $(GTEST_DIR)/src/gtest_main.cc \
+			-o $(GTEST_DIR)/make/$@
 
 gtest.a : gtest-all.o
 	$(AR) $(ARFLAGS) $(GTEST_DIR)/make/$@ $(GTEST_DIR)/make/$^
 
 gtest_main.a : gtest-all.o gtest_main.o
-	$(AR) $(ARFLAGS) $(GTEST_DIR)/make/$@ $(GTEST_DIR)/make/$^
+	$(AR) $(ARFLAGS) $(GTEST_DIR)/make/$@ $(addprefix $(GTEST_DIR)/make/,$^)
 
 # Tests
-utility_parser.o : utility_parser.cpp $(GTEST_HEADERS)
-	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -c utility_parser.cpp
+SRC := $(wildcard *.cpp)
+OBJ := $(SRC:.cpp=.o)
+LIBS := ../boost_1_59_0
 
-# needs boost
-utility_listHelpers.o : utility_listHelpers.cpp $(GTEST_HEADERS)
-	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -c -I ../boost_1_59_0 utility_listHelpers.cpp
-
-utility_consecIntMap.o : utility_consecIntMap.cpp $(GTEST_HEADERS)
-	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -c utility_consecIntMap.cpp
-
-conn_comps.o : conn_comps.cpp $(GTEST_HEADERS)
-	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -c -I ../boost_1_59_0 conn_comps.cpp
-
-distance.o : distance.cpp $(GTEST_HEADERS)
-	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -c -I ../boost_1_59_0 distance.cpp
-
-main.o : main.cpp $(GTEST_HEADERS)
-	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -c main.cpp
-
-test : utility_parser.o $(UTIL_DIR)/Parser.o \
-		utility_listHelpers.o \
-		utility_consecIntMap.o \
-		conn_comps.o \
-		distance.o \
-		main.o \
-		$(GTEST_DIR)/make/gtest.a
+test: $(OBJ) $(GTEST_DIR)/make/gtest.a ../src/utility/Parser.o
 	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -lpthread $^ -o $@
+
+include $(OBJ:.o=.d)
+
+./%.o: ./%.cpp $(GTEST_HEADERS)
+	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -I ../boost_1_59_0 -c $<
+
+%.d: %.cpp
+	./depend.sh $(CXXFLAGS) $*.cpp > $@
+
+.PHONY: clean
+clean: 
+	rm -f *.o *.d test
