src_Makefile: added target & linking spd

--- a/src/Makefile
+++ b/src/Makefile
@@ -13,8 +13,14 @@ include $(patsubst %,%/sdir.mk,$(SDIRS))
 OBJ := $(patsubst %.cpp,%.o,$(filter %.cpp,$(SRC)))
 DEP := $(patsubst %.cpp,%.d,$(filter %.cpp,$(SRC)))
 
+# path to BA-shortest-paths (relative to this makefile)
+SPD_PATH := ../../BA-shortest-paths-decomposition
+SPD_EXCL := $(SPD_PATH)/build/Main.o
+SPD_OBJ_ALL := $(wildcard $(SPD_PATH)/build/*.o)
+SPD_OBJ_LINK := $(filter-out $(SPD_EXCL),$(SPD_OBJ_ALL))
+
 dsSolver: $(OBJ)
-	$(CXX) -o $@ $(OBJ) $(LIBS)
+	$(CXX) -o $@ $(OBJ) $(SPD_OBJ_LINK) $(LIBS)
 
 include $(OBJ:.o=.d)
 
@@ -24,3 +30,8 @@ include $(OBJ:.o=.d)
 .PHONY: clean
 clean: 
 	rm -f $(DEP) $(OBJ) dsSolver
+
+# build BA-shortes-paths-decomposition
+.PHONY: spd
+spd:
+	$(MAKE) -C $(SPD_PATH)
